# geant4-german

./: .gitignore  CMakeLists.txt  DetectorConstruction.cc  DetectorConstruction.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  main.cc
macros/: init_vis.mac
